# cold-context

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: compress_bench.rs
src/: boundary.rs  budget.rs  compressor.rs  config.rs  counter.rs  error.rs  integrity.rs  lib.rs  microcompact.rs  note.rs  pruner.rs  reactive.rs  redact.rs  restore.rs  security.rs  summary.rs  template.rs  util.rs
tests/: boundary_tests.rs  compressor_tests.rs  counter_tests.rs  integrity_tests.rs  pruner_tests.rs  util_tests.rs
