[package]
name = "cold-context"
version = "1.0.0"
edition = "2024"
description = "LAMCLOD context window management library"
license = "MIT"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/LamClod/cold-context"
keywords = ["llm", "context", "compression", "token", "agent"]
categories = ["algorithms", "asynchronous"]

[dependencies]
cold-sdk = { version = "1.0.0", path = "../cold-sdk" }
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compress_bench"
harness = false
